Demonstrate adding content in behind the curtains

--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-    <meta charset="utf-8" />
-    <title>XXX Rated CSS Animations</title>
-    <link rel="stylesheet" type="text/css" href="./Index.css" />
-    <link rel="stylesheet" type="text/css" href="./Curtains.css" />
-    <script src="./Index.js"></script>
-    <script src="./Curtains.js"></script>    
+  <meta charset="utf-8" />
+  <title>XXX Rated CSS Animations</title>
+  <link rel="stylesheet" type="text/css" href="./Index.css" />
+  <link rel="stylesheet" type="text/css" href="./Curtains.css" />
+  <script src="./Index.js"></script>
+  <script src="./Curtains.js"></script>
 </head>
+
 <body>
 
   <div id="feature-neon-sign">
@@ -41,11 +43,15 @@
     <button id="curtains-activate" style="width: 100%; padding: 1rem;" type="button">
       This button causes the saucy CSS act to change!
     </button>
-    <div id="curtains-target">
+    <div id="saucy-feature">
+      <div id="curtains-container">
+      </div>
+      <div id="saucy-act">
+        <p style="color: white">This is a test to demonstrate the wrapping feature of the curtains.</p>
+      </div>
     </div>
-
-
   </div>
-    
+
 </body>
+
 </html>
