--- a/Index.html
+++ b/Index.html
@@ -18,21 +18,21 @@
   <div id="neon-container">
     <div class="neon-static-container">
       <p class="red neon-skew-left">Animations</p>
-      <p class="white neon-skew-left">Shapes</p>
-      <p class="blue neon-skew-left">Gradients</p>
+      <p class="white neon-skew-left" style="animation-delay: 1s">Shapes</p>
+      <p class="blue neon-skew-left" style="animation-delay: 2s">Gradients</p>
     </div>
     <div class="neon-fluid-container">
       <div class="container red">
         <div class="container white">
           <div class="container blue">
-            <p><span class="red">XXX</span> <span class="white">Rated</span> <span class="blue">Animations</span></p>
+            <p style="margin: 1rem 0;"><span class="red">XXX</span> <span class="white">Rated</span> <span class="blue">Animations</span></p>
           </div>
         </div>
       </div>
     </div>
     <div class="neon-static-container">
-      <p class="blue neon-skew-right">Offsets</p>
-      <p class="white neon-skew-right">Transitions</p>
+      <p class="blue neon-skew-right" style="animation-delay: 2s">Offsets</p>
+      <p class="white neon-skew-right" style="animation-delay: 1s">Transitions</p>
       <p class="red neon-skew-right">Stacking Contexts</p>
     </div>
   </div>
