First steps of adding curtain animation in vanilla JS

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <title>XXX Rated CSS Animations</title>
     <link rel="stylesheet" type="text/css" href="./Index.css" />
+    <link rel="stylesheet" type="text/css" href="./Curtains.css" />
     <script src="./Index.js"></script>
+    <script src="./Curtains.js"></script>    
 </head>
 <body>
 
@@ -33,6 +35,18 @@
     <div style="display: flex; justify-content: center; margin: 2rem;">
       <div id="spinner-target" class="spinner-target"></div>
     </div>
+  </div>
+
+  <!--Curtains functionality for animation peep show-->
+
+  <div id="feature-curtains" style="margin: 1rem; width: calc(100% - 2rem);">
+    <button id="curtains-activate" style="width: 100%; padding: 1rem;" type="button">
+      This button causes the saucy CSS act to change!
+    </button>
+    <div id="curtains-target">
+    </div>
+
+
   </div>
     
 </body>
