Web Components? really?

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./Index.css" />
   <link rel="stylesheet" type="text/css" href="./Neon/Neon.css" />
   <link rel="stylesheet" type="text/css" href="./Curtains/Curtains.css" />
+  <script src="./Components/MyFirstWebComponent/MyFirstWebComponent.js"></script>
   <script src="./Index.js"></script>
   <script src="./Curtains/Curtains.js"></script>
 </head>
@@ -49,7 +50,7 @@
 
       <div id="curtains-container"></div>
       <div id="saucy-act">
-        <p style="color: white">This is a test to demonstrate the wrapping feature of the curtains.</p>
+        <my-first-wc />
       </div>
 
       <!--Curtains end -->
