Just a couple of web components examples

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" type="text/css" href="./Index.css" />
   <link rel="stylesheet" type="text/css" href="./Neon/Neon.css" />
   <link rel="stylesheet" type="text/css" href="./Curtains/Curtains.css" />
-  <script src="./Components/MyFirstWebComponent/MyFirstWebComponent.js"></script>
+  <script src="./Components/MyFirstWebComponent.js"></script>
+  <script src="./Components/MySecondWebComponent.js"></script>
   <script src="./Index.js"></script>
   <script src="./Curtains/Curtains.js"></script>
 </head>
@@ -50,7 +51,8 @@
 
       <div id="curtains-container"></div>
       <div id="saucy-act">
-        <my-first-wc />
+        <my-first-wc></my-first-wc>
+        <p is="custom-paragraph">Some example text here.</p>
       </div>
 
       <!--Curtains end -->
